[workspace]
members = ["sorting/quicksort",
           "sorting/mergesort",
           "searching/linear_search",
           "misc/genetic"]
default-members = ["sorting/quicksort",
                   "sorting/mergesort",
                   "searching/linear_search",
                   "misc/genetic"]

[[test]]
name = "mergesort"
path = "sorting/mergesort/src/lib.rs"

[[test]]
name = "quicksort"
path = "sorting/quicksort/src/lib.rs"

[[test]]
name = "genetic"
path = "misc/genetic/src/lib.rs"

[[test]]
name = "linear_search"
path = "searching/linear_search/src/lib.rs"


[package]
name = "algos"
version = "0.1.0"
authors = ["Jakob Beckmann <beckmann_jakob@hotmail.fr>"]

[dependencies]
